22.nov (sy)
      - fix regression: midi output driver would not play past the first note,
        caused by rewind playback after reaching end change on 5.oct
21.nov (ws)
      - removed shortcut for trill ("T") which conflicts with time palette.
20.nov (ws)
      - updated dutch translation from Jaap Plaisier
      - made default color for score elements (black) configurable. On print, this
        default color is always mapped to black. This should make an inverted color
        scheme possible (white on black).
      - fix ledger line paint problem; bounding box was not calculated
      - proper scale ledger lines in a small staff
      - better layout for whole measure rests
      (sy)
      - fix regression: score sometimes would show blank canvas when opening files,
        due to uninitialized score x and y offset
      - fix: canvas does not pan vertically to follow playback when at high zoom levels
      - fix: navigator is shown for opened scores if set to show in preferences
19.nov (ws)
      - Save used images (pasted to the score) in *.mscz file.
        Removed "image path" hack. See demo "demos/schnee.mscz".
      - fixed crash when entering intervals ([Alt]+<number>)
      (sy)
      - implement opening files by drag & drop onto main window
      - improved glissando layout
      - glissando from grace note now works
18.nov (ws)
      - better layout of displaced note heads (test3.msc)
      - last score can now be removed
      - implement new start option: start with no score
      - removed round corners from splash screen
      (db)
      - new splash screen
17.nov (ws)
      - fix layout if first note in a chord has a grace note (distance grace note - note
        was too large)
      - fixed bug in tuplet entry
      - fix another palette related crash
      (sy)
      - fix square bracket tips not connected to bracket, visible at
        higher zoom levels
      - fix problem with layout in new system, caused by hide empty stave changes