@@ -370,6 +370,12 @@
             </channel>
          </instrument>
       <instrument>
+         <name>Alto</name>
+         <channel>
+            <program>52</program>
+            </channel>
+         </instrument>
+      <instrument>
          <name>Countertenor</name>
          <channel>
             <program>52</program>
