@@ -1,6 +1,8 @@
 22.nov (sy)
       - fix regression: midi output driver would not play past the first note,
         caused by rewind playback after reaching end change on 5.oct
+       (db)
+      - Added "Alto" voice to instrument lists
 21.nov (ws)
       - removed shortcut for trill ("T") which conflicts with time palette.
 20.nov (ws)
